--- a/node/src/views/planner.ejs
+++ b/node/src/views/planner.ejs
@@ -52,6 +52,7 @@
                                     <script>
                                         var username = "<%=username%>"
                                         var api_key = "<%=api_key%>"
+                                        var email= "<%=email%>"
                                     </script>
                                 </div>
                                 <div class="card-body d-grid gap-3">
